<resources>
    <string name="app_name">MARKETİM</string>

    <string name="username">Kullanıcı Adı</string>
    <string name="password">Şifre</string>
    <string name="remember_me">Beni Hatırla</string>
    <string name="login">Giriş Yap</string>
    <string name="login_fail_warning">Kullanıcı adı ve şifre alanı boş veya hatalı kullanıcı adı ve şifre!</string>
    <string name="ok">Tamam</string>

    <!-- Orders -->
    <string name="my_orders">Siparişlerim</string>
    <string name="exit">Çıkış Yap</string>
    <string name="order_status_preparing">Hazırlanıyor</string>
    <string name="order_status_order_on_way">Siparişin Yolda</string>
    <string name="order_status_waiting">Onay Bekliyor</string>
    <string name="exit_message">Çıkış yapmak istiyor musunuz?</string>
    <string name="i_want">İstiyorum</string>
    <string name="i_dont_want">İstemiyorum</string>
</resources>
