<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.eozcan.techchassignment.viewmodels.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/login_title_padding_top"
            android:paddingBottom="@dimen/login_title_padding_bottom"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/app_red"
            android:textSize="@dimen/login_title_text_size" />

        <!--
            Niye scrollView? Küçük cihazlarda klavye açıldığında
            kullanıcıların scroll edebilmeleri için
         -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tv_title"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- paddingBottom ekledim çünkü tasarıma göre dikey olarak biraz yukarda -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/login_fields_margin_horizontal"
                    android:layout_marginEnd="@dimen/login_fields_margin_horizontal"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/login_fields_padding_bottom"
                    tools:ignore="UselessParent">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_white_with_border_gray"
                        android:drawableStart="@drawable/ic_perm_identity_gray_24dp"
                        android:drawablePadding="@dimen/edittext_drawable_padding"
                        android:hint="@string/username"
                        android:padding="@dimen/edittext_padding"
                        android:text="@={viewModel.user.name}" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/login_fields_margin_top"
                        android:background="@drawable/bg_white_with_border_gray"
                        android:drawableStart="@drawable/ic_lock_outline_gray_24dp"
                        android:drawablePadding="@dimen/edittext_drawable_padding"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="@dimen/edittext_padding"
                        android:text="@={viewModel.user.password}" />

                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/login_fields_margin_top"
                        android:checked="@={viewModel.rememberMe}" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/login_btn_margin_top"
                        android:background="@drawable/bg_red"
                        android:onClick="@{() -> viewModel.onLoginClicked()}"
                        android:text="@string/login"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</layout>