<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.eozcan.techchassignment.viewmodels.OrderItemViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->viewModel.onItemClicked()}"
            android:paddingBottom="@dimen/order_area_padding_vertical">

            <LinearLayout
                android:id="@+id/container_date"
                android:layout_width="@dimen/order_date_area_width"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.order.date}"
                    android:textAlignment="center"
                    android:textColor="@color/app_gray_dark"
                    android:textSize="@dimen/order_date_day_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    app:month="@{viewModel.order.month}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/order_area_padding_vertical"
                android:layout_toEndOf="@+id/container_date"
                android:background="@drawable/bg_gray_border_left"
                android:orientation="vertical"
                android:paddingStart="@dimen/order_seperator_padding_right">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_toStartOf="@+id/image_arrow"
                        android:text="@{viewModel.order.marketName}"
                        android:textColor="@color/app_gray_dark"
                        android:textSize="@dimen/order_text_size"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/image_arrow"
                        android:layout_width="@dimen/order_arrow_size"
                        android:layout_height="@dimen/order_arrow_size"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:paddingEnd="@dimen/order_arrow_padding_end"
                        android:src="@drawable/ic_keyboard_arrow_right_gray_dark_24dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/order_info_margin_top"
                    android:paddingEnd="@dimen/order_area_padding_end">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_toStartOf="@+id/tv_price_product"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@{viewModel.order.orderName}"
                        android:textSize="@dimen/order_text_size" />

                    <TextView
                        android:id="@+id/tv_price_product"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:textColor="@color/app_gray_dark"
                        android:textSize="@dimen/order_text_size"
                        android:textStyle="bold"
                        app:price="@{viewModel.order.productPrice}" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/order_info_margin_top"
                    android:paddingEnd="@dimen/order_area_padding_end">

                    <RelativeLayout
                        android:id="@+id/container_order_status_preparing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:status="@{viewModel.order.productState}">

                        <ImageView
                            android:id="@+id/icon_preparing"
                            android:layout_width="@dimen/order_status_icon_size"
                            android:layout_height="@dimen/order_status_icon_size"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/icon_preparing" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="@dimen/order_status_text_margin_start"
                            android:layout_toEndOf="@+id/icon_preparing"
                            android:text="@string/order_status_preparing"
                            android:textColor="@color/preparing"
                            android:textSize="@dimen/order_text_size" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/container_order_status_order_on_way"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingEnd="@dimen/order_area_padding_end"
                        android:visibility="gone"
                        app:status="@{viewModel.order.productState}">

                        <ImageView
                            android:id="@+id/icon_order_on_way"
                            android:layout_width="@dimen/order_status_icon_size"
                            android:layout_height="@dimen/order_status_icon_size"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/icon_order_on_way" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="@dimen/order_status_text_margin_start"
                            android:layout_toEndOf="@+id/icon_order_on_way"
                            android:text="@string/order_status_order_on_way"
                            android:textColor="@color/order_on_way"
                            android:textSize="@dimen/order_text_size" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/container_order_status_waiting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:status="@{viewModel.order.productState}">

                        <ImageView
                            android:id="@+id/icon_order_waiting"
                            android:layout_width="@dimen/order_status_icon_size"
                            android:layout_height="@dimen/order_status_icon_size"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/icon_waiting" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="@dimen/order_status_text_margin_start"
                            android:layout_toEndOf="@+id/icon_order_waiting"
                            android:text="@string/order_status_waiting"
                            android:textColor="@color/app_red"
                            android:textSize="@dimen/order_text_size" />
                    </RelativeLayout>
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/order_product_detail_bg"
            android:paddingStart="@dimen/order_product_padding_start"
            android:paddingTop="@dimen/order_area_padding_vertical"
            android:paddingEnd="@dimen/order_area_padding_end"
            android:paddingBottom="@dimen/order_area_padding_vertical"
            android:visibility="gone"
            app:expanded="@{viewModel.order.productExpanded}">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/tv_price"
                android:background="@drawable/bg_gray_border_bottom"
                android:paddingBottom="@dimen/order_product_padding_bottom"
                android:text="@{viewModel.order.productDetail.orderDetail}"
                android:textSize="@dimen/order_text_size" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/bg_gray_border_bottom"
                android:paddingBottom="@dimen/order_product_padding_bottom"
                android:textColor="@color/app_gray_dark"
                android:textSize="@dimen/order_text_size"
                android:textStyle="bold"
                app:price="@{viewModel.order.productDetail.summaryPrice}" />
        </RelativeLayout>
    </LinearLayout>
</layout>